--- a/dataTextarea.html
+++ b/dataTextarea.html
@@ -1,3 +1,12 @@
 <template name="dapp_dataTextarea">
-    <textarea name="{{name}}" class="dapp-data-textarea {{class}} {{#unless TemplateVar.get 'isValid'}}dapp-error{{/unless}}" cols="{{cols}}" rows="{{rows}}" {{additionalAttributes}}>{{value}}</textarea>
+    <textarea
+        name="{{name}}"
+        class="dapp-data-textarea {{class}} {{#unless TemplateVar.get 'isValid'}}dapp-error{{/unless}}"
+        cols="{{cols}}"
+        rows="{{rows}}"
+        {{additionalAttributes}}
+        title=""
+    >
+        {{value}}
+    </textarea>
 </template>
