--- a/selectAccount.html
+++ b/selectAccount.html
@@ -1,6 +1,6 @@
 <template name="dapp_selectAccount">
     <div class="dapp-select-account {{class}}">
-        <select name="{{#if name}}{{name}}{{else}}dapp-select-account{{/if}}" class="{{class}}">
+        <select name="{{#if name}}{{name}}{{else}}dapp-select-account{{/if}}" class="{{class}}" title="">
             {{#each accounts}}
                 <option value="{{address}}" {{selected}}>
                     {{#if isAccount}}🔑{{/if}} {{name}}
