--- a/selectGasPrice.html
+++ b/selectGasPrice.html
@@ -2,7 +2,7 @@
     <div class="dapp-select-gas-price">
         <span>{{fee}} <span>{{unit}}</span></span>
         <br>
-        <input type="range" name="fee" min="-4" max="1" step="1" value="{{TemplateVar.get 'feeMultiplicator'}}">
+        <input type="range" name="fee" min="-4" max="1" step="1" value="{{TemplateVar.get 'feeMultiplicator'}}" title="">
         <span>{{i18nText 'low'}}</span>
         <span>{{i18nText 'high'}}</span>
     </div>
